<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <FrameLayout
        android:id="@+id/framelayout_mainactivity_addphotochooserholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/shape_dimmer"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearlayout_mainactivity_addphotochooser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="140dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/add_x_ray_instruction"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:id="@+id/button_addsubmission_add_from_camera"
                    style="@style/WhiteChooseImportTypeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:text="@string/camera"
                    app:rippleColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/imageview_addsubmission_cameraicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_add_a_photo_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:id="@+id/button_addsubmission_add_from_device_gallery"
                    style="@style/WhiteChooseImportTypeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:text="@string/photos"
                    app:rippleColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/imageview_addsubmission_galleryicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_add_from_gallery_24" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/glass_gradient_background_less_transparent"
        app:elevation="20dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:itemIconTint="@color/colorSecondaryLight"
        app:itemRippleColor="#FFFFFF"
        app:itemTextColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/app_bar_menu"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_mainactivity_addsubmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorSecondaryLight"
        app:borderWidth="2dp"
        app:elevation="21dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/bottom_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottom_app_bar"
        app:layout_constraintTop_toTopOf="@+id/bottom_app_bar"
        app:maxImageSize="40dp"
        app:rippleColor="@color/colorPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>